# Flownet-Experiments

./: README.md
models/flownet/: .gitignore  condor_the_thing.condor  createImList.sh  createImListTrain.sh  demo_flownets.py  flo_list.txt  flo_list_original.txt  img1.txt  img1_list.txt  img1_list_original.txt  img2.txt  img2_list.txt  img2_list_original.txt  prepareTrainingset.sh  runFlownet.sh  runFlownetOnCookingset.sh  runFlownetOnData.sh  train_flownets.py
models/flownet/flo-interpreter/: 1.flo  2.flo  2.txt  3.flo  CMakeLists.txt  check.sh  convert_txt_jpg  convert_txt_jpg.m  convertflotojpg.sh  convertflototxt.sh  converttxttojpg.sh  flo_interpreter.cc  flo_interpreter_jpg.cc  interpreter.sh  interpreterOne.sh  run_convert_txt_jpg.sh
models/flownet/flo-interpreter/fischer/: c_flow.c  c_sintelflow.c  flow.pyx  readmet.txt
models/flownet/flo-interpreter/fischer/flow-code/imageLib/: index.html  index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=S;O=A  index.html?C=S;O=D
models/flownet/flo-interpreter/fischer/flow-code/imageLib-old/: ImageIO.cpp  index.html  index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=S;O=A  index.html?C=S;O=D
models/flownet/flo-interpreter/flowcodeMiddlebury/flow-code/: color_flow  colortest  convertFlo.cc  flownets-pred-0000143.flo  flownets-pred-0000144.flo  flownets-pred-0000146.flo  quickflo.sh  test.flo
models/flownet/flo-interpreter/flowcodeMiddlebury/flow-code-matlab/: flowToColor.m  flownets-pred-0000145.flo  run.m
(+2 files in other folders)
